--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
     "handlebars": "~3.0.3",
     "underscore": "~1.8.3",
     "commonjs-require": "~1.4.5",
-    "backbone": "~1.2.1"
+    "backbone": "~1.2.1",
+    "pure": "~0.6.0",
+    "material-design-lite": "~1.0.0"
   }
 }
